Update Next.js version and Vercel config
Added Next.js 14.2.32 to devDependencies in package.json. Refactored vercel.json to use the latest Vercel configuration format with custom builds and routing for the frontend directory.

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   },
   "devDependencies": {
     "axios": "^1.6.0",
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "next": "14.2.32"
   },
   "engines": {
     "node": ">=18.0.0",
